--- a/work.html
+++ b/work.html
@@ -13,20 +13,24 @@ permalink: /work/
 <ul class="u-listUnstyled m-work-list m-page-content padding">
 	{% for post in site.categories['work'] %}
 		<li class="m-work-item row m-animation-{{forloop.index}}">
-			<div class="col-sm-4">
-				<p class="u-text--small u-color--gray">{{ post.role }}</p>
-				<h2 class="m-work-title">{{ post.title }}</h2>
-				<p>{{ post.description }}</p>
+			<div class="col-sm-8 col-sm-push-4">
+				<div class="m-work-image" style="background-image: url(/assets/images/work/{{post.image}})"></div>
+			</div>
+			<div class="col-sm-4 col-sm-pull-8">
+				<div class="hidden--sm">
+					<p class="u-text--small u-color--gray">{{ post.role }}</p>
+					<h2 class="m-work-title">{{ post.title }}</h2>
+					<p>{{ post.description }}</p>
+				</div>
+				
+				<h2 class="m-work-title hidden--md-up margin--none">{{ post.title }}</h2>
 
 				{% if post.is_caseStudy %}
-					<a class="btn margin--sm" href="{{ post.url | prepend: site.baseurl }}" data-text="View Case Study"></a>
+					<a class="btn m-work-link" href="{{ post.url | prepend: site.baseurl }}" data-text="View Case Study"></a>
 				{% endif %}
 				{% if post.link %}
-					<a class="btn margin--sm" href="{{post.link}}" target="_blank" data-text="{{post.link_text}}"></a>
+					<a class="btn m-work-link" href="{{post.link}}" target="_blank" data-text="{{post.link_text}}"></a>
 				{% endif %}
-			</div>
-			<div class="col-sm-8">
-				<div class="m-work-image" style="background-image: url(/assets/images/work/{{post.image}})"></div>
 			</div>
 		</li>
 	{% endfor %}
