--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@ permalink: /about/
 		<div>
 			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-3"><br>I studied UX/UI Design at the University of Sydney, and self-taught visual design and front-end development.</p>
 			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-4">I play drums in a band, and have recorded and mixed a <a href="https://themanhattanalgorithm.bandcamp.com" target="_blank">number</a> <a href="https://soundcloud.com/juanpombo/death-volta-02-eram-quod-es" target="_blank">of</a> <a href="https://soundcloud.com/the-manhattan-algorithm/meridian-hour" target="_blank">albums</a>.</p>
-			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-5">You can download my <a href="/assets/files/MorganCarterResume.pdf">résumé</a> or contact me at <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a> .</p>
+			<p class="m-heroText-paragraph m-heroText-paragraph--aboutMe m-animation-5">You can download my <a href="/assets/files/MorganCarterResume.pdf">CV</a> or contact me at <a href="mailto:morgancarter1@gmail.com">morgancarter1@gmail.com</a> .</p>
 		</div>
 	</div>
 </div>
