New homepage, make blog live

--- a/work.html
+++ b/work.html
@@ -36,6 +36,6 @@ permalink: /work/
 	{% endfor %}
 </ul>
 
-<a class="btn-footer" href="mailto:morgancarter1@gmail.com">
+<a class="btn-footer" href="mailto:{{ site.email }}">
 	<span class="btn" data-text="Contact Me"></span>
 </a>
