--- a/blog.html
+++ b/blog.html
@@ -12,25 +12,31 @@ permalink: /design-solutions/
 
 	<div>
 		<ul class="u-listUnstyled">
+			{% for post in site.categories['coming-soon'] %}
+				<li class="margin-bottom">
+					<p class="u-text--small u-color--gray margin--none">Coming soon...</p>
+					<div class="btn btn--small m-blogPost-btn disabled" data-text="{{ post.title }}"></div>
+					<p class="margin--none u-color--gray">{{ post.description }}</p>
+				</li>
+			{% endfor %}
 			{% for post in site.categories['design-solutions'] %}
 				<li class="margin-bottom">
-					{% if post.is_live %}
-						<a class="m-blogPost-link" href="{{ post.url | prepend: site.baseurl }}">
-							<p class="u-text--small u-color--gray margin--none">{{ post.date | date: "%b %-d, %Y" }}</p>
-							<span class="btn btn--small m-blogPost-btn">{{ post.title }}</span>
+					<a class="m-blogPost-link" href="{{ post.url | prepend: site.baseurl }}">
+						<div class="m-blogPost-image">
+							<img src="/assets/images/blog/{{ post.thumbnail }}">
+						</div>
+						<div class="m-blogPost-description">
+							<p class="u-text--small u-color--gray margin--none">{{ post.date | date: "%-d %b, %Y" }}</p>
+							<span class="btn btn--small m-blogPost-btn" data-text="{{ post.title }}"></span>
 							<p class="margin--none">{{ post.description }}</p>
-						</a>
-					{% else %}
-						<p class="u-text--small u-color--gray margin--none">Coming soon...</p>
-						<a class="btn btn--small m-blogPost-btn disabled">{{ post.title }}</a>
-						<p class="margin--none u-color--gray">{{ post.description }}</p>
-					{% endif %}
+						</div>
+					</a>
 				</li>
 			{% endfor %}
 		</ul>
 	</div>
 </div>
 
-<a class="btn-footer" href="mailto:morgancarter1@gmail.com">
+<a class="btn-footer" href="mailto:{{ site.email }}">
 	<span class="btn" data-text="Contact Me"></span>
 </a>
