--- a/index.html
+++ b/index.html
@@ -7,24 +7,41 @@ body-id: home
 <div class="m-home-wrapper padding margin--none">
 	{% include me.html %}
 
-	<div class="m-latestWork hidden">
-		<h4 class="m-latestWork-header">Latest Works</h4>
-		<ul class="u-listUnstyled margin--none row m-latestWork-list">
-			{% for post in site.categories['work'] limit:0 %}
-				<li class="col-xs-6 col-sm-4 m-latestWork-item">
-					<a class="m-latestWork-work" href="{% if post.is_blog %}{{ post.url | prepend: site.baseurl }}{% endif %}{% if post.link %}{{post.link}}{% endif %}">
-						<img src="/assets/images/work/thumbnails/{{post.thumbnail}}" class="m-latestWork-image">
-						<strong>{{ post.title }}</strong>
-						<p class="m-latestWork-subtitle margin--none u-text--small">{{ post.subtitle }}</p>
-					</a>
-				</li>
+	<div class="m-latestWork-wrapper">
+		<div class="m-latestWork padding m-animation-5">
+			<div class="m-latestWork-header">
+				<h4 class="m-latestWork-title">Latest Blog Post</h4>
+				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/design-solutions">View more →</a>
+			</div>
+			{% for post in site.categories['design-solutions'] limit:1 %}
+				<a class="m-blogPost-link margin--sm" href="{{ post.url | prepend: site.baseurl }}">
+					<div class="m-blogPost-image">
+						<img src="/assets/images/blog/{{ post.thumbnail }}">
+					</div>
+					<div class="m-blogPost-description">
+						<span class="btn btn--small m-blogPost-btn" data-text="{{ post.title }}"></span>
+						<p class="margin--none u-text--small">{{ post.description }}</p>
+					</div>
+				</a>
 			{% endfor %}
-		</ul>
+		</div>
+		<div class="m-latestWork padding m-animation-6">
+			<div class="m-latestWork-header">
+				<h4 class="m-latestWork-title">Featured Work</h4>
+				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/work">View more →</a>
+			</div>
+			{% for post in site.categories['work'] limit:1 %}
+				<a class="m-blogPost-link margin--sm" href="{{ post.url | prepend: site.baseurl }}">
+					<div class="m-blogPost-image">
+						<img src="/assets/images/work/{{ post.thumbnail }}">
+					</div>
+					<div class="m-blogPost-description">
+						<span class="btn btn--small m-blogPost-btn" data-text="{{ post.title }}"></span>
+						<p class="margin--none u-text--small">{{ post.description_short }}</p>
+					</div>
+				</a>
+			{% endfor %}
+		</div>
 	</div>
 </div>
-<div class="m-home-me m-animation-5">
-	<div class="m-home-wrapper m-home-wrapper--invert padding">
-		{% include me.html %}
-	</div>
-</div>
-
+<div class="m-home-me m-animation-7"></div>
