visited link css change

--- a/blog.html
+++ b/blog.html
@@ -6,11 +6,11 @@ categories: jekyll update
 permalink: /design-solutions/
 ---
 
-<div class="container--sm padding--lg margin--none m-animation-1">
+<div class="padding--lg margin--none m-animation-1">
 	<h1 class="m-page-title">{{ page.title }}</h1>
 	<p class="u-text--center">Common product design problems and how to solve them.</p>
 
-	<div>
+	<div class="container--xs">
 		<ul class="u-listUnstyled">
 			{% for post in site.categories['coming-soon'] %}
 				<li class="margin-bottom">
