--- a/blog.html
+++ b/blog.html
@@ -8,7 +8,29 @@ permalink: /design-solutions/
 
 <div class="padding--lg margin--none m-animation-1">
 	<h1 class="m-page-title">{{ page.title }}</h1>
-	<p class="u-text--center">Common product design problems and how to solve them.</p>
+	<p class="u-text--center">Common design problems and how to solve them.</p>
+
+	<!-- <form class="m-form">
+		<div class="container--xs padding">
+			<h3 class="m-form-title u-color--white u-text--center">Newsletter Signup</h3>
+			<p class="u-color--white u-text--center">A new email for each new post, and never any spam.</p>
+			<div class="m-form-table">
+				<div class="m-form-cell">
+					<div class="m-input-wrapper">
+						<label class="m-input-label" for="contactForm-email">My email is</label>
+						<div class="m-input">
+							<label class="m-input-placeholder" for="contactForm-email">Email address</label>
+							<input id="contactForm-email" type="email" placeholder="email@domain.com">
+						</div>
+						<label class="m-input-error" for="contactForm-email">Email address is required!</label>
+					</div>
+				</div>
+				<div class="m-form-cell m-form-cell--btn">
+					<button class="btn btn--modal" data-text="Submit"></button>
+				</div>
+			</div>
+		</div>
+	</form> -->
 
 	<div class="container--xs">
 		<ul class="u-listUnstyled">
