--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 ---
-layout: bare
+layout: default
 siteNav: home
 body-id: home
 ---
@@ -19,7 +19,7 @@ body-id: home
 						<img src="/assets/images/blog/{{ post.thumbnail }}">
 					</div>
 					<div class="m-blogPost-description">
-						<span class="btn btn--small m-blogPost-btn" data-text="{{ post.title }}"></span>
+						<span class="btn btn--sm m-blogPost-btn" data-text="{{ post.title }}"></span>
 						<p class="margin--none u-text--small">{{ post.description }}</p>
 					</div>
 				</a>
@@ -36,7 +36,7 @@ body-id: home
 						<img src="/assets/images/work/{{ post.thumbnail }}">
 					</div>
 					<div class="m-blogPost-description">
-						<span class="btn btn--small m-blogPost-btn" data-text="{{ post.title }}"></span>
+						<span class="btn btn--sm m-blogPost-btn" data-text="{{ post.title }}"></span>
 						<p class="margin--none u-text--small">{{ post.description_short }}</p>
 					</div>
 				</a>
