--- a/work.html
+++ b/work.html
@@ -1,5 +1,5 @@
 ---
-layout: bare
+layout: default
 siteNav: work
 title:  "Work"
 categories: jekyll update
@@ -36,6 +36,6 @@ permalink: /work/
 	{% endfor %}
 </ul>
 
-<a class="btn-footer" href="mailto:{{ site.email }}">
+<!-- <a class="btn-footer" href="mailto:{{ site.email }}">
 	<span class="btn" data-text="Contact Me"></span>
-</a>
+</a> -->
