--- a/blog.html
+++ b/blog.html
@@ -10,26 +10,7 @@ permalink: /design-solutions/
 	<h1 class="m-page-title">{{ page.title }}</h1>
 	<p class="u-text--center">Common design problems and how to solve them.</p>
 
-	<!-- <form class="m-form">
-		<div class="container--xs padding">
-			<p class="m-form-title">Get emailed about design solutions. No spam, ever.</p>
-			<div class="m-form-table">
-				<div class="m-form-cell">
-					<div class="m-input-wrapper">
-						<label class="m-input-label" for="contactForm-email">My email is</label>
-						<div class="m-input">
-							<label class="m-input-placeholder" for="contactForm-email">Email address</label>
-							<input id="contactForm-email" type="email" placeholder="email@domain.com">
-						</div>
-						<label class="m-input-error" for="contactForm-email">Email address is required!</label>
-					</div>
-				</div>
-				<div class="m-form-cell m-form-cell--btn">
-					<button class="btn btn--modal btn--sm" data-text="Submit"></button>
-				</div>
-			</div>
-		</div>
-	</form> -->
+	{% include newsletter.html %}
 
 	<div class="container--xs">
 		<ul class="u-listUnstyled">
