newsletter signup fix for iOS

--- a/blog.html
+++ b/blog.html
@@ -12,7 +12,7 @@ permalink: /design-solutions/
 
 	{% include newsletter.html %}
 
-	<div class="container--xs">
+	<section class="container--xs">
 		<ul class="u-listUnstyled">
 			{% for post in site.categories['coming-soon'] %}
 				<li class="margin-bottom">
@@ -36,7 +36,7 @@ permalink: /design-solutions/
 				</li>
 			{% endfor %}
 		</ul>
-	</div>
+	</section>
 </div>
 
 <!-- <a class="btn-footer" href="mailto:{{ site.email }}">
