--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@ body-id: home
 		<div class="m-latestWork padding m-animation-5">
 			<div class="m-latestWork-header">
 				<h4 class="m-latestWork-title">Latest Blog Post</h4>
-				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/design-solutions">View more →</a>
+				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/design-solutions/">View more →</a>
 			</div>
 			{% for post in site.categories['design-solutions'] limit:1 %}
-				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}">
+				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
 					<div class="m-post-image">
 						<img src="/assets/images/blog/{{ post.thumbnail }}">
 					</div>
@@ -28,10 +28,10 @@ body-id: home
 		<div class="m-latestWork padding m-animation-6">
 			<div class="m-latestWork-header">
 				<h4 class="m-latestWork-title">Featured Work</h4>
-				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/work">View more →</a>
+				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/work/">View more →</a>
 			</div>
 			{% for post in site.categories['work'] limit:1 %}
-				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}">
+				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
 					<div class="m-post-image">
 						<img src="/assets/images/work/{{ post.thumbnail }}">
 					</div>
