twitter card and Facebook open graph

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@ permalink: /design-solutions/
 				<li class="margin-bottom">
 					<a class="m-post-link" href="{{ post.url | prepend: site.baseurl }}/">
 						<div class="m-post-image">
-							<img src="/assets/images/blog/{{ post.thumbnail }}">
+							<img src="/assets/images/{{ post.thumbnail }}">
 						</div>
 						<div class="m-post-description">
 							<p class="u-text--small u-color--gray margin--none">{{ post.date | date: "%-d %b, %Y" }}</p>
