--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ body-id: home
 			{% for post in site.categories['design-solutions'] limit:1 %}
 				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
 					<div class="m-post-image">
-						<img src="/assets/images/blog/{{ post.thumbnail }}">
+						<img src="/assets/images/{{ post.thumbnail }}">
 					</div>
 					<div class="m-post-description">
 						<span class="btn btn--sm m-post-btn" data-text="{{ post.title }}"></span>
@@ -33,7 +33,7 @@ body-id: home
 			{% for post in site.categories['work'] limit:1 %}
 				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
 					<div class="m-post-image">
-						<img src="/assets/images/work/{{ post.thumbnail }}">
+						<img src="/assets/images/{{ post.thumbnail }}">
 					</div>
 					<div class="m-post-description">
 						<span class="btn btn--sm m-post-btn" data-text="{{ post.title }}"></span>
