various updates in prep for services page

--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@ permalink: /design-solutions/
 	</div>
 
 	<section class="container--xs">
-		<ul class="u-listUnstyled m-post-content">
+		<ul class="m-post-content">
 			{% for post in site.categories['coming-soon'] %}
 				<li class="margin-bottom">
 					<p class="u-text--small u-color--gray margin--none">Coming soon...</p>
