add services page

--- a/services.html
+++ b/services.html
@@ -14,41 +14,55 @@ permalink: /services/
 	<ul class="row">
 		<li class="m-services-item col-sm-4 m-animation-2">
 			<div class="row">
-				<div class="col-xs-3 col-sm-12 m-services-icon margin--none">
+				<div class="m-services-icon col-xs-3 col-sm-12 margin--none">
 					<img class="m-services-iconImage" src="/assets/images/services/ux-design.png">
 				</div>
-				<div class="col-xs-9 col-sm-12">
-					<h4>UX Design</h4>
-					<p class="m-services-description">
-					User experience design treads the line between objective and subjective. Done well, it results in a product that's both easy to use, and emotionally engaging.</p>
-					<a class="btn btn--sm margin--sm" data-text="See related work" href="/work/stackla-widgets/"></a>
+				<div class="m-services-description col-xs-9 col-sm-12">
+					<h4 class="m-services-title">UX Design</h4>
+					<p>Understanding your users is the key to creating a product that's both easy to use and emotionally engaging.</p>
+					<p class="u-text--small u-color--gray margin--none">Includes: Information architecture design, user flows, user testing, usability reviews, and interactive wireframes.</p>
+					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="/work/stackla-widgets/"></a>
 				</div>
 			</div>
 		</li>
 		<li class="m-services-item col-sm-4 m-animation-3">
 			<div class="row">
-				<div class="col-xs-3 col-sm-12 m-services-icon margin--none">
+				<div class="m-services-icon col-xs-3 col-sm-12 margin--none">
 					<img class="m-services-iconImage" src="/assets/images/services/product-design.png">
 				</div>
-				<div class="col-xs-9 col-sm-12">
-					<h4>Product Design</h4>
-					<p class="m-services-description">From defining product features, to laying out user interfaces, to final visual styling; I'm able to carry an idea from conception to production.
+				<div class="m-services-description col-xs-9 col-sm-12">
+					<h4 class="m-services-title">Product Design</h4>
+					<p>A great user interface is beautiful, intuitive, and makes executing complex tasks seem effortless and even enjoyable.</p>
+					<p class="u-text--small u-color--gray margin--none">Includes: defining product features, laying out user interfaces, visual styling, and motion design.
 					</p>
-					<a class="btn btn--sm margin--sm" data-text="See related work" href="/work/deputy-3/"></a>
+					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="/work/deputy-3/"></a>
 				</div>
 			</div>
 		</li>
 		<li class="m-services-item col-sm-4 m-animation-4">
 			<div class="row">
-				<div class="col-xs-3 col-sm-12 m-services-icon margin--none">
+				<div class="m-services-icon col-xs-3 col-sm-12 margin--none">
 					<img class="m-services-iconImage" src="/assets/images/services/development.png">
 				</div>
-				<div class="col-xs-9 col-sm-12">
-					<h4>Development</h4>
-					<p class="m-services-description">Being able to fully code my own work means that the user gets the full designed experience, not an approximation.</p>
-					<a class="btn btn--sm margin--sm" data-text="See related work" href="http://asntm2.starworldasia.tv/"
+				<div class="m-services-description col-xs-9 col-sm-12">
+					<h4 class="m-services-title">Development</h4>
+					<p>Being able to fully code my own work means that the user gets the full designed experience, not an approximation.</p>
+					<p class="u-text--small u-color--gray margin--none">Includes: HTML, CSS, JavaScript, and limited PHP.
+					</p>
+					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="http://asntm2.starworldasia.tv/"></a>
 				</div>
-			</></a>
+			</div>
+		</li>
+	</ul>
+	<ul class="row margin--none hidden--sm u-text--center">
+		<li class="m-services-item col-sm-4 m-animation-5">
+			<a class="btn btn--sm" data-text="See related work" href="/work/stackla-widgets/"></a>
+		</li>
+		<li class="m-services-item col-sm-4 m-animation-6">
+			<a class="btn btn--sm" data-text="See related work" href="/work/deputy-3/"></a>
+		</li>
+		<li class="m-services-item col-sm-4 m-animation-7">
+			<a class="btn btn--sm" data-text="See related work" href="http://asntm2.starworldasia.tv/"></a>
 		</li>
 	</ul>
 </ul>
