fix for mobile padding on homepage

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ siteNav: home
 body-id: home
 ---
 
-<div class="m-home-wrapper padding margin--none">
+<div class="m-home-wrapper margin--none">
 	{% include me.html %}
 
 	<div class="m-latestWork-wrapper">
