--- a/services.html
+++ b/services.html
@@ -11,7 +11,14 @@ permalink: /services/
 </div>
 
 <div class="m-services padding margin--none">
-	<ul class="row">
+	<h3 class="m-services-about">
+		<p>I’m a freelance digital <em>product designer</em>.</p>
+		<p>I help <em>small businesses</em> turn complex ideas into simple products.</p>
+		<p>Right now I'm also <em>mentoring</em> at <a href="https://www.bloc.io/">Bloc</a>, or <em>writing</em> at <a href="http://audienceops.com/">AudienceOps</a>.</p>
+		<p>Want to work together? I’d love to <em><a class="js-contactMe-openModal">hear from you</a></em>.</p>
+	</h3>
+
+	<ul class="row margin--xl">
 		<li class="m-services-item col-sm-4 m-animation-2">
 			<div class="row">
 				<div class="m-services-icon col-xs-3 col-sm-12 margin--none">
