--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@ permalink: /services/
 	<h3 class="m-services-about">
 		<p>I’m a freelance digital <em>product designer</em>.</p>
 		<p>I help <em>small businesses</em> turn complex ideas into simple products.</p>
-		<p>Right now I'm also <em>mentoring</em> at <a href="https://www.bloc.io/">Bloc</a>, or <em>writing</em> at <a href="http://audienceops.com/">AudienceOps</a>.</p>
+		<p>Right now, I'm also <em>mentoring</em> at <a href="https://www.bloc.io/">Bloc</a> and <em>writing</em> at <a href="http://audienceops.com/">AudienceOps</a>.</p>
 		<p>Want to work together? I’d love to <em><a class="js-contactMe-openModal">hear from you</a></em>.</p>
 	</h3>
 
