replace home image with a laptop, typo fix in blog post

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ body-id: home
 			</div>
 			{% for post in site.categories['work'] limit:1 %}
 				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
-					<div class="m-post-image">
+					<div class="m-post-image m-home-laptop">
 						<img src="/assets/images/{{ post.thumbnail }}">
 					</div>
 					<div class="m-post-description">
