fix permalink for Jekyll 3

--- a/blog.html
+++ b/blog.html
@@ -27,7 +27,7 @@ permalink: /design-solutions/
 			{% endfor %}
 			{% for post in site.categories['design-solutions'] %}
 				<li class="margin-bottom">
-					<a class="m-post-link" href="{{ post.url | prepend: site.baseurl }}/">
+					<a class="m-post-link" href="{{ post.url | prepend: site.baseurl }}">
 						<div class="m-post-image">
 							<img src="/assets/images/{{ post.thumbnail }}">
 						</div>
