--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ body-id: home
 				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/design-solutions/">View more →</a>
 			</div>
 			{% for post in site.categories['design-solutions'] limit:1 %}
-				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
+				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}">
 					<div class="m-post-image">
 						<img src="/assets/images/{{ post.thumbnail }}">
 					</div>
@@ -31,7 +31,7 @@ body-id: home
 				<a class="m-latestWork-more u-text--small" href="{{ site.baseurl }}/work/">View more →</a>
 			</div>
 			{% for post in site.categories['work'] limit:1 %}
-				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}/">
+				<a class="m-post-link margin--sm" href="{{ post.url | prepend: site.baseurl }}">
 					<div class="m-post-image m-home-laptop">
 						<img src="/assets/images/{{ post.thumbnail }}">
 					</div>
