fix broken links goddamnit jekyll 3

--- a/services.html
+++ b/services.html
@@ -28,7 +28,7 @@ permalink: /services/
 					<h4 class="m-services-title">UX Design</h4>
 					<p>Understanding your users is the key to creating a product that's both easy to use and emotionally engaging.</p>
 					<p class="u-text--small u-color--gray margin--none">Includes: Information architecture design, user flows, user testing, usability reviews, and interactive wireframes.</p>
-					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="/work/stackla-widgets/"></a>
+					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="/work/stackla-widgets"></a>
 				</div>
 			</div>
 		</li>
@@ -42,7 +42,7 @@ permalink: /services/
 					<p>A great user interface is beautiful, intuitive, and makes executing complex tasks seem effortless and even enjoyable.</p>
 					<p class="u-text--small u-color--gray margin--none">Includes: defining product features, laying out user interfaces, visual styling, and motion design.
 					</p>
-					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="/work/deputy-3/"></a>
+					<a class="btn btn--sm margin--sm hidden--md-up" data-text="See related work" href="/work/deputy-3"></a>
 				</div>
 			</div>
 		</li>
