and more fixing links

--- a/services.html
+++ b/services.html
@@ -63,10 +63,10 @@ permalink: /services/
 	</ul>
 	<ul class="row margin--none hidden--sm u-text--center">
 		<li class="m-services-item col-sm-4 m-animation-5">
-			<a class="btn btn--sm" data-text="See related work" href="/work/stackla-widgets/"></a>
+			<a class="btn btn--sm" data-text="See related work" href="/work/stackla-widgets"></a>
 		</li>
 		<li class="m-services-item col-sm-4 m-animation-6">
-			<a class="btn btn--sm" data-text="See related work" href="/work/deputy-3/"></a>
+			<a class="btn btn--sm" data-text="See related work" href="/work/deputy-3"></a>
 		</li>
 		<li class="m-services-item col-sm-4 m-animation-7">
 			<a class="btn btn--sm" data-text="See related work" href="http://asntm2.starworldasia.tv/"></a>
