switch to domaine font, update images, resize carousel on resize

--- a/aeroster.html
+++ b/aeroster.html
@@ -10,7 +10,7 @@ title: Fulfilling a childhood ambition and a gap in the market
 		<div class="Page-hero">
 			<h1>Fulfilling a childhood ambition and a gap in the market</h1>
 
-			<img src="/assets/images/work/aeroster/hero.png" class="Page-heroImage" >
+			<img src="/assets/images/work/aeroster/hero.png" class="Page-heroImage">
 		</div>
 
 		<div class="Page-subhero">
@@ -24,7 +24,7 @@ title: Fulfilling a childhood ambition and a gap in the market
 					<div class="Page-introduction m-top--lg">
 						<p>Chris approached me to help design an app he’d been thinking about since he was a kid. His dad was a pilot, and was in and away from home non-stop. The golden rule was the roster, but they were incomprehensible, especially to a 6-year-old.</p>
 
-						<p>Chris had been accepted into the <span class="font-serif">Qantas AVRO Accelerator Program</span>. He had 12 weeks in total, and he was already two weeks in. We needed to build him something to present to investors at the end of the program.</p>
+						<p>Chris had been accepted into the <em>Qantas AVRO Accelerator Program</em>. He had 12 weeks in total, and he was already two weeks in. We needed to build him something to present to investors at the end of the program.</p>
 					</div>
 
 					<button class="button m-top--lg">Launch the site</button>
@@ -72,7 +72,7 @@ title: Fulfilling a childhood ambition and a gap in the market
 				</h2>
 				<div class="grid">
 					<div class="grid-item when-lg-6">
-						{% include carousel.html style="left" image1="/assets/images/work/aeroster/emila1.jpg" image2="/assets/images/work/aeroster/emila2.png" image3="/assets/images/work/aeroster/emila3.png" description="Thank you Emila :)" %}
+						{% include carousel.html style="left" image1="/assets/images/work/aeroster/optimised/emila1.png" image2="/assets/images/work/aeroster/optimised/emila2.png" image3="/assets/images/work/aeroster/optimised/emila3.png" description="Thank you Emila :)" %}
 					</div>
 
 					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
@@ -92,7 +92,7 @@ title: Fulfilling a childhood ambition and a gap in the market
 						<p>Chris had contracted out branding to an agency, so my first step was to start turning Emila’s wireframes into hi-fidelity designs using the branding as a basis. However, it quickly became apparent that the branding didn’t suit the product.</p>
 					</div>
 					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
-						{% include carousel.html style="right" image1="/assets/images/work/aeroster/rebrand1.png" image1_description="This was my first iteration. There’s nothing wrong with it, but the cartoony style detracted rather than added to the function of the app." image2="/assets/images/work/aeroster/rebrand2.png" image2_description="Chris and I sat down for about 3 hours and turned that into this. Much better." image3="/assets/images/work/aeroster/rebrand2.png" image3_description="The final version looked like this." %}
+						{% include carousel.html style="right" image1="/assets/images/work/aeroster/rebrand1.png" image1_description="This was my first iteration. There’s nothing wrong with it, but the cartoony style detracted rather than added to the function of the app." image2="/assets/images/work/aeroster/rebrand2.png" image2_description="Chris and I sat down for about 3 hours and turned that into this. Much better." image3="/assets/images/work/aeroster/rebrand3.png" image3_description="The final version looked like this." %}
 					</div>
 				</div>
 
@@ -101,13 +101,13 @@ title: Fulfilling a childhood ambition and a gap in the market
 						<p>After our radical redesign, Chris dumped his old agency, hired a new guy, and produced an incredible logo. We picked fonts, colours, icons, and produced a coherent, clean design system.</p>
 					</div>
 					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0 when-lg-pull-6">
-						{% include image.html style="full" url="/assets/images/work/aeroster/ui-kit.png" %}
+						{% include image.html style="full" url="/assets/images/work/aeroster/optimised/ui-kit.png" %}
 					</div>
 				</div>
 			</section>
 
 			<section class="Page-section" id="mobile">
-				<div class="grid">
+				<div class="grid align-center">
 					<div class="grid-item when-lg-6">
 						<h2>
 							<p>Mobile-first, desktop-best</p>
@@ -120,7 +120,7 @@ title: Fulfilling a childhood ambition and a gap in the market
 				</div>
 
 				<div class="m-top--lg when-lg-m-top--xl">
-					{% include image.html style="full" url="/assets/images/work/aeroster/desktop-mobile.png" %}
+					{% include image.html style="full" url="/assets/images/work/aeroster/desktop-mobile.png" width="1074" %}
 				</div>
 			</section>
 
