new blue color, update images

--- a/aeroster.html
+++ b/aeroster.html
@@ -24,7 +24,7 @@ title: Fulfilling a childhood ambition and a gap in the market
 					<div class="Page-introduction m-top--lg">
 						<p>Chris approached me to help design an app he’d been thinking about since he was a kid. His dad was a pilot, and was in and away from home non-stop. The golden rule was the roster, but they were incomprehensible, especially to a 6-year-old.</p>
 
-						<p>Chris had been accepted into the <em>Qantas AVRO Accelerator Program</em>. He had 12 weeks in total, and he was already two weeks in. We needed to build him something to present to investors at the end of the program.</p>
+						<p>Chris had been accepted into the <em><a href="http://avroaccelerator.qantas.com/">Qantas AVRO Accelerator Program</a></em>. He had 12 weeks in total, and he was already two weeks in. We needed to build him something to present to investors at the end of the program.</p>
 					</div>
 
 					<button class="button m-top--lg">Launch the site</button>
@@ -125,18 +125,17 @@ title: Fulfilling a childhood ambition and a gap in the market
 			</section>
 
 			<section class="Page-section" id="illustrations">
-				<h2 class="m-bottom--sm when-lg-m-bottom--lg">
-					<p>Quick-n-beautiful illustrations</p>
-					<p class="font-serif color-muted">Something something subtitle</p>
-				</h2>
+				<div class="grid">
+					<div class="grid-item when-lg-6 when-lg-push-6">
+						<h2 class="m-bottom--sm when-lg-m-bottom--lg">
+							<p>Quick-n-beautiful illustrations</p>
+							<p class="font-serif color-muted">Something something subtitle</p>
+						</h2>
 
-
-				<div class="grid m-top--lg">
-					<div class="grid-item when-lg-6">
 						<p>I’m no illustrator, but we needed illustrations. I used our chosen icon pack as a base to create some simple, beautiful illustrations that we could pepper throughout the app.</p>
 					</div>
-					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0">
-						{% include carousel.html style="left" image1="/assets/images/work/aeroster/illustrations1.png" image2="/assets/images/work/aeroster/illustrations2.png" image3="/assets/images/work/aeroster/illustrations3.png" %}
+					<div class="grid-item when-lg-6 m-top--lg when-lg-m-top--0 when-lg-pull-6">
+						{% include image.html style="left" url="/assets/images/work/aeroster/illustrations.png" %}
 					</div>
 				</div>
 			</section>
